# resumeAI

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DEVELOPMENT.md  README.md  build.sh  cover-letter-latexcode.docx  docker-compose.yml  netlify.toml  package.json  pyproject.toml  render.yaml  requirements.txt  setup.py  vercel.json
.rc-engine/: PIPELINE.md  state.db
api/: index.py
backend/: .dockerignore  .env.example  Dockerfile  main.py  requirements.txt  vercel.json
backend/ai/: client.py  prompts.py  router.py
backend/generators/: cover_letter_generator.py  docx_generator.py  latex_generator.py  latex_templates.py  pdf_generator.py
backend/parsers/: docx_parser.py  pdf_parser.py
backend/pipeline/: orchestrator.py  progress_store.py  session_store.py  stage1_parse.py  stage2_analyze.py  stage3_rewrite.py  stage4_validate.py  stage5_cover_letter.py
backend/utils/: auth.py  diff.py  scoring.py  subscription_store.py  supabase_store.py
docs/plans/: 2026-03-06-feat-cover-letter-generation-plan.md
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
pre-rc-research/: RESEARCH-INDEX.md  ResumeAI_v2_PRD.docx  brief.md  classification.md  persona-selection.md  prd-resumeai-v2.html  prd-resumeai-v2.md  tasks-resumeai-v2.md
pre-rc-research/gates/: gate-1.md  gate-2.md  gate-3.md
pre-rc-research/stage-1-meta/: meta-product-architect.md  research-program-director.md  token-economics-optimizer.md
pre-rc-research/stage-2-user-intelligence/: demand-side-theorist.md  (+2 more)
(+65 files in other folders)
